apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "paperless"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.33"
spec:
  type: LoadBalancer
  selector:
    app: paperless-ngx
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
